2010-05-28  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13636: sysext:version needs doNotLoadInFE => 0 (Thanks to Georg Ringer)
	* Fixed bug #13160: Datepicker doesn't work with IE8 in French (Thanks to Alexandre Gravel-Raymond)

2010-05-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13934: Side-effect of substr in t3lib_cs (thanks to Rens Admiraal)

2010-05-27  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #14388: TypoScript templates containing a "$1" become corrupted

2010-05-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14333: htmlArea RTE: justify after CTRL+A not working in Firefox

2010-05-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE version to 1.8.10

2010-05-22  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12923: Javascript error in tmenu_layers.php & gmenu_layers.php (Thanks to Klaus Goessl)

2010-05-22  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14175: belog not shown / error when actions: error is selected (thanks to Philipp Thiele)

2010-05-21  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #13749: IRRE: Inline elements of translated records are not copied correctly. (Thanks to Albrecht Koehnlein)

2010-05-20  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #7753: EM warns No XCLASS inclusion code found if you use $GLOBALS['TYPO3_CONF_VARS'] (thanks to Franz Holzinger)

2010-05-14  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #14337: "The install tool is locked" doesn't send no-cache headers (thanks to Steffen Gebert)

2010-05-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12803: Creating or deleting ENABLE_INSTALL_TOOL file saves settings in "User Settings"
	* Fixed bug #14341: c&p error in t3lib_div::logDeprecatedFunction

2010-05-12  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14052: cache_treelist is out of date after setting hidden=0 (thanks to Steffen Gebert)

2010-05-10  Stanislas Rolland  <typo3@sjbr.ca>
